모달 알림 추가

--- a/src/main/resources/templates/thymeleaf/fo/myPage/information.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/information.html
@@ -808,7 +808,7 @@
 								<a href="javascript:AuthorInfoSave(1);" class="btnAction ba-btn2"><span>등록하기</span></a>
 								<a href="javascript:AuthorInfoSave(2);" class="btnAction ba-btn2"><span>임시저장</span></a>
 								<a href="javascript:formReset();" class="btnAction ba-btn2"><span>취소</span></a>
-								<a href="javascript:fn_alert();" class="btnAction ba-btn2"><span>미리보기</span></a>
+								<!-- <a href="javascript:fn_alert();" class="btnAction ba-btn2"><span>미리보기</span></a> -->
 							</div>
 						</div>
 						
