소장품 등록 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -465,6 +465,7 @@ $(function() {
 	}
 });
 function collectionReg(){
+	work.mbrSq = sMbrSqVal;
 	work.artstYear = $("#artstYear").val();
 	work.workPrc = $("#workPrc").val();
 	work.workSizeWidth = $("#workSizeWidth").val();
