--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -68,7 +68,7 @@
 				<!-- 로그인후 -->
 				<div class="login-show h-img" id="loginAf" style="display:none;">
 					<span class="sog-1"><a href="javascript:fnModalAlert();"><img src="resources/img/icon-1.png" /></a></span>
-					<span class="sog-2 lg-my"><a href="javascript:fnModalAlert();"><img src="resources/img/icon-2.png" /></a></span>
+					<span class="sog-2 lg-my"><a href="#"><img src="resources/img/icon-2.png" /></a></span>
 					<div class="s-hov">
 						<ul>
 							<li><a href="/memberEdit"><img src="resources/img/ic-1.jpg" /><span>마이 페이지</span></a></li>
