MyPage > 알림설정 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/alarm.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/alarm.html
@@ -115,7 +115,7 @@ $( document ).ready(function() {
 	       
 	        $.ajax({
 	            type: "post",
-	            url: "/myPage/memberUpdateData",
+	            url: "/myPage/memberAlarmData",
 	            data: params,
 	            success: function(data) {
 	         	 
@@ -143,7 +143,7 @@ $( document ).ready(function() {
 	       
 	        $.ajax({
 	            type: "post",
-	            url: "/myPage/memberUpdateData",
+	            url: "/myPage/memberAlarmData",
 	            data: params,
 	            success: function(data) {
 	         	 
