--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -303,10 +303,10 @@
 				</div>
 			</div>
 			
-			<div class="columns-wrap"></div>
+			
 				
 			<!-- 가장 많은 입찰 / 오늘의 낙찰 -->
-			<div class="contents max-1500" style="height: 100%;">
+			<div class="contents max-1500" style="height: 600px;">
 				<div class="cont-title">
 					<h3>오늘의 낙찰</h3>
 					<!-- <a href="#" class="ct-more mo-no"><img src="img/icon-p.jpg" /><span>more</span></a> -->
@@ -367,9 +367,9 @@
 		<div class="text-center">
 			<button type="button" class="btn-more" onclick="more_onCilck()"><span>more</span></button>
 		</div>
+		 
 		
-		
-		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
+		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block> 
 	</div>
 
 
