--- a/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
@@ -26,21 +26,11 @@
 							
 							<div class="me-center">
 								<div class="member-box">
-									<div class=" inp-p radio-3">
-										<!-- 사용자 등뢴 이메일 변경 하지 않음 : 1 , 이메일변경 : 2 -->
-										<input type="checkbox" id="userInputEmailUsing" value="1" checked>
-										<label for="userInputEmailUsing"><span></span>등록된 아이디(이메일) 사용</label>
-										
-									</div>
+									
 									<div class="input-box input-group">
 										<input type="hidden" id="uMbrSq" name="uMbrSq">
 										<input type="text" class="input-3" id="uMbrId" name="uMbrId" placeholder="아이디/이메일" readonly/>
-										<button type="button" class="group-btn" id="EmailCertification_tbd">인증하기</button>
-									</div>
-									<div class="input-box" style="text-align:center;display:none" id="emailCertCode">
-										<input  type="text" id="emailCert" name="emailCert" title="인증번호 입력" style="height:25px;"/>
-										<button type="button" class="ba-btn1" id="emailCertBtn" style="height:25px;padding-left:5px;padding-right:5px;"><span>이메일인증</span></button>
-										<input type="hidden" id="emailCertChk"/>
+										
 									</div>
 									
 									<p class="inp-p" id="emailCertificationCheck" style="display:none">이메일 인증 완료</p>
@@ -197,19 +187,6 @@ $("#memberUpdateBtn").on('click', function(event){
 	//휴대폰 본인인증 날짜
 	var mbrCpCertDate = $("#uMbrCpCertDate").val();
 	
-	if(isEmpty(mbrId)) {
-		fn_validation('uMbrIdCheck','이메일을 입력해주세요.', 'R');
-		return;
-	} 
-	if(!CheckEmail(mbrId)) {
-		fn_validation('uMbrIdCheck','이메일을 올바르게 입력해주세요.', 'R');
-		return;
-	}
-	 
-	$("#uMbrId").blur();
-	 
-	fn_validation('uMbrIdCheck','주로 사용하는 이메일을 입력해 주세요. 경매/판매 내역을 발송해 드립니다.', 'B');
-	
 	//비밀번호--------------------------------------------------------------------//
 	//비밀번호 문자 입력이 안되었다면..
 	if(isEmpty(mbrPasswrd)) {
@@ -343,7 +320,8 @@ $("#memberUpdateBtn").on('click', function(event){
 	     url: "/myPage/memberUpdateData",
 	     data: memParams,
 	     success: function(data) {
-	    	 modalAlertShow("회원수정이 완료 되었습니다.","");
+	    	 modalAlertShow("회원수정이 완료 되었습니다.","reload");
+	    	
 	   	 },
 	     error: function(error) {
 	  	   var errorJson = JSON.stringify(error);
@@ -370,82 +348,6 @@ function mobileAuthFail()
 }
 
 
-//아이디 중복 체크 2022-03-29
-$("#uMbrId").blur(function() {
-	
-	var userInputEmailUsingChecked = $('#userInputEmailUsing').is(':checked');
-	console.log(userInputEmailUsingChecked);
-	
-	if(userInputEmailUsingChecked != true) {
-		var dataCheckCount = {};
-		
-		var mbrIdParam = $("#uMbrId").val();
-		
-		if(isEmpty(mbrIdParam)) {
-			fn_validation('mbrIdCheck','이메일을 입력해주세요.', 'R');
-			return;
-		}
-		
-		if(mbrIdParam) {
-		
-			let param = {
-				mbrId : mbrIdParam
-			}
-			
-			$.ajax({
-				   type: "post",
-				   url: "/myPage/memberIdChkData",
-				   data: param,
-				   success: function(data) {
-					   
-					dataCheckCount = data.memberCheck.memberIdCheck[0];
-					
-					console.log("dataCheckCount :"+dataCheckCount);
-					
-					if(dataCheckCount > 0) {
-									
-						var msg = "이미 가입된 이메일 주소입니다. 다른 이메일을 입력해 주세요.";
-						
-						fn_validation('uMbrIdCheck',msg, 'R');
-						fn_validation('uMbrPwdCheck','', 'B');
-						fn_validation('uMbrPwdReCheck','확인을 위해 새 비밀번호를 다시 입력해주세요.', 'B');
-						fn_validation('uMbrNmCheck','', 'B');
-						$('#uMbrPwdCheckU').css('color','#999999');
-						$('#uMbrPwdCheckD').css('color','#999999');
-						
-						return;
-					
-					} else {
-						
-						if(!CheckEmail(mbrIdParam)) {
-							$('#uMbrIdCheck').html('이메일을 올바르게 입력해주세요.');
-							$('#uMbrIdCheck').css('color','red');
-						} else {
-							var msg = "주로 사용하는 이메일을 입력해 주세요. 경매/판매 내역을 발송해 드립니다.";
-							fn_validation('uMbrIdCheck',msg, 'B');	
-						}
-						
-						return;
-					}
-				   },
-				   error: function(error) {
-					   var errorJson = JSON.stringify(error);
-				       //alert("오류 발생" + errorJson);
-				       console.log(errorJson);
-				   }
-				})
-		} else {
-			
-			var msg = "주로 사용하는 이메일을 입력해 주세요. 경매/판매 내역을 발송해 드립니다.";
-			
-			fn_validation('mbrIdCheck',msg, 'B');
-			
-			return;
-			
-		}
-	
-	}
-});
 
 $(window).on("resize", function () {
     if(window.matchMedia('(min-width: 1537px)').matches){
