--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -303,16 +303,16 @@
 				</div>
 			</div>
 			
-			
+		
 				
 			<!-- 가장 많은 입찰 / 오늘의 낙찰 -->
-			<div class="contents max-1500" style="height: 600px;">
+			<div class="contents max-1500">
 				<div class="cont-title">
 					<h3>오늘의 낙찰</h3>
 					<!-- <a href="#" class="ct-more mo-no"><img src="img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
-				<div class="cns-div">
-					<div class="columns-wrap" id="columns">
+				
+					<div id="columns">
 						<!-- <figure class="item">
 							<img src="resources/img/img-1.jpg">
 							<a class="hd-div2">								
@@ -360,9 +360,58 @@
 									</div>
 								</div>
 							</a>
+						</figure>
+						
+						<figure class="item">
+							<img src="resources/img/img-4.jpg">
+							<a class="hd-div2">								
+								<div class="hd-text">
+									<h4>작가명</h4>
+									<div class="hd-tc">
+										<div class="hd-d1">작품명(2021)<br/>소재 Oil & Canvas, 72.7x90.9cm</div>
+										<div class="hd-d2">낙찰가 3,700,000 원</div>
+									</div>
+								</div>
+							</a>
+						</figure>
+						<figure class="item">
+							<img src="resources/img/img-2.jpg">
+							<a class="hd-div2">								
+								<div class="hd-text">
+									<h4>작가명</h4>
+									<div class="hd-tc">
+										<div class="hd-d1">작품명(2021)<br/>소재 Oil & Canvas, 72.7x90.9cm</div>
+										<div class="hd-d2">낙찰가 3,700,000 원</div>
+									</div>
+								</div>
+							</a>
+						</figure>
+						<figure class="item">
+							<img src="resources/img/img-3.jpg">
+							<a class="hd-div2">								
+								<div class="hd-text">
+									<h4>작가명</h4>
+									<div class="hd-tc">
+										<div class="hd-d1">작품명(2021)<br/>소재 Oil & Canvas, 72.7x90.9cm</div>
+										<div class="hd-d2">낙찰가 3,700,000 원</div>
+									</div>
+								</div>
+							</a>
+						</figure>
+						<figure class="item">
+							<img src="resources/img/img-4.jpg">
+							<a class="hd-div2">								
+								<div class="hd-text">
+									<h4>작가명</h4>
+									<div class="hd-tc">
+										<div class="hd-d1">작품명(2021)<br/>소재 Oil & Canvas, 72.7x90.9cm</div>
+										<div class="hd-d2">낙찰가 3,700,000 원</div>
+									</div>
+								</div>
+							</a>
 						</figure> -->
 					</div>
-				</div>
+			
 		</div>
 		<div class="text-center">
 			<button type="button" class="btn-more" onclick="more_onCilck()"><span>more</span></button>
@@ -500,75 +549,75 @@
 	   	          },
 	   	        });
 	   	    	
-		   	    document.querySelectorAll(".item").forEach((item) => {
-		       	     item.style.gridRowEnd = `span ${item.clientHeight + 20}`;
-		       	  });
-		       	  const wrap = document.querySelector(".columns-wrap");
-		       	  wrap.style.display = "grid";
-		       	  wrap.style.gridTemplateColumns = "repeat(auto-fill, 360px)";
-		       	  wrap.style.gridAutoRows = "1px";
+// 		   	    document.querySelectorAll(".item").forEach((item) => {
+// 		       	     item.style.gridRowEnd = `span ${item.clientHeight + 20}`;
+// 		       	  });
+// 		       	  const wrap = document.querySelector(".columns-wrap");
+// 		       	  wrap.style.display = "grid";
+// 		       	  wrap.style.gridTemplateColumns = "repeat(auto-fill, 360px)";
+// 		       	  wrap.style.gridAutoRows = "1px";
 		       	  
 		       	  
-		       	var swiper = new Swiper(".mySwiper3", {
-		      	  slidesPerView: 5,
-		            spaceBetween: 20,
-		            slidesPerGroup: 1,
-		            loop: true,
-		            loopFillGroupWithBlank: true,
-		        });
+// 		       	var swiper = new Swiper(".mySwiper3", {
+// 		      	  slidesPerView: 5,
+// 		            spaceBetween: 20,
+// 		            slidesPerGroup: 1,
+// 		            loop: true,
+// 		            loopFillGroupWithBlank: true,
+// 		        });
 	   	    	
 	   	    	
-	   	    }  else if(window.matchMedia('(min-width: 751px)').matches) {
-	   	    	var swiper = new Swiper(".mySwiper2", {
-	   	          slidesPerView: 2,
-	   	          spaceBetween: 30,
-	   	          slidesPerGroup: 1,
-	   	          loop: true,
-	   	          loopFillGroupWithBlank: true,
-	   	          pagination: {
-	   	            el: ".swiper-pagination",
-	   	            clickable: true,
-	   	          },
-	   	          navigation: {
-	   	            nextEl: ".swiper-button-next",
-	   	            prevEl: ".swiper-button-prev",
-	   	          },
-	   	     });
+// 	   	    }  else if(window.matchMedia('(min-width: 751px)').matches) {
+// 	   	    	var swiper = new Swiper(".mySwiper2", {
+// 	   	          slidesPerView: 2,
+// 	   	          spaceBetween: 30,
+// 	   	          slidesPerGroup: 1,
+// 	   	          loop: true,
+// 	   	          loopFillGroupWithBlank: true,
+// 	   	          pagination: {
+// 	   	            el: ".swiper-pagination",
+// 	   	            clickable: true,
+// 	   	          },
+// 	   	          navigation: {
+// 	   	            nextEl: ".swiper-button-next",
+// 	   	            prevEl: ".swiper-button-prev",
+// 	   	          },
+// 	   	     });
 	   	    	
-		   	      document.querySelectorAll(".item").forEach((item) => {
-		       	     item.style.gridRowEnd = `span ${item.clientHeight + 20}`;
-		       	  });
-		       	  const wrap = document.querySelector(".columns-wrap");
-		       	  wrap.style.display = "grid";
-		       	  wrap.style.gridTemplateColumns = "repeat(auto-fill, 42rem)";
-		       	  wrap.style.gridAutoRows = "1px";
+// 		   	      document.querySelectorAll(".item").forEach((item) => {
+// 		       	     item.style.gridRowEnd = `span ${item.clientHeight + 20}`;
+// 		       	  });
+// 		       	  const wrap = document.querySelector(".columns-wrap");
+// 		       	  wrap.style.display = "grid";
+// 		       	  wrap.style.gridTemplateColumns = "repeat(auto-fill, 42rem)";
+// 		       	  wrap.style.gridAutoRows = "1px";
 		       	  
 		       	  
-		       	var swiper = new Swiper(".mySwiper3", {
-		      	  slidesPerView: 3,
-		            spaceBetween: 20,
-		            slidesPerGroup: 1,
-		            loop: true,
-		            loopFillGroupWithBlank: true,
-		        });
+// 		       	var swiper = new Swiper(".mySwiper3", {
+// 		      	  slidesPerView: 3,
+// 		            spaceBetween: 20,
+// 		            slidesPerGroup: 1,
+// 		            loop: true,
+// 		            loopFillGroupWithBlank: true,
+// 		        });
 		       	
 		       	
 	   	    	
-	   	     } else {
-	   	    	var swiper = new Swiper(".mySwiper2", {
-	   	          slidesPerView: 1,
-	   	          slidesPerGroup: 1,
-	   	          loop: true,
-	   	          loopFillGroupWithBlank: true,
-	   	          pagination: {
-	   	            el: ".swiper-pagination",
-	   	            clickable: true,
-	   	          },
-	   	          navigation: {
-	   	            nextEl: ".swiper-button-next",
-	   	            prevEl: ".swiper-button-prev",
-	   	          },
-	   	     });
+// 	   	     } else {
+// 	   	    	var swiper = new Swiper(".mySwiper2", {
+// 	   	          slidesPerView: 1,
+// 	   	          slidesPerGroup: 1,
+// 	   	          loop: true,
+// 	   	          loopFillGroupWithBlank: true,
+// 	   	          pagination: {
+// 	   	            el: ".swiper-pagination",
+// 	   	            clickable: true,
+// 	   	          },
+// 	   	          navigation: {
+// 	   	            nextEl: ".swiper-button-next",
+// 	   	            prevEl: ".swiper-button-prev",
+// 	   	          },
+// 	   	     });
 	   	    	
 	       	  
 	       	var swiper = new Swiper(".mySwiper3", {
@@ -740,7 +789,7 @@
   		
   		console.log("imgWidth :"+imgWidth);
   		console.log("imgHeight :"+imgHeight);
-  		
+  		  		
   		$('#hd-'+imgId).width(imgWidth);
   		$('#hd-'+imgId).height(imgHeight);
  		
