파일 여러개 업로드 메소드 추가, 나의 작품 등록, 나의 소장품 등록 개발, 헤더에서 작가면 작가기본정도 불러오기 추가

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -455,6 +455,7 @@ $(function() {
 				workListHtml += '				<li>'+ workList[i].dealRemainingMin +'<span>min</span></li>';
 				workListHtml += '				<li>'+ workList[i].dealRemainingSec +'<span>sec</span></li></ul>';
 				workListHtml += '				<h4>시작가 : '+ formatComma(workList[i].dealStrtPrc) +'</h4>';
+				workListHtml += '		</div>';
 				workListHtml += '	</div>';
 			}
 			if(workList[i].dealTypCd == "SALE" && workList[i].dealTypCd == "IP"){
@@ -466,6 +467,7 @@ $(function() {
 				workListHtml += '				<li>'+ workList[i].dealRemainingHour +'<span>hrs</span></li>';
 				workListHtml += '				<li>'+ workList[i].dealRemainingMin +'<span>min</span></li>';
 				workListHtml += '				<li>'+ workList[i].dealRemainingSec +'<span>sec</span></li></ul>';
+				workListHtml += '		</div>';
 				workListHtml += '	</div>';
 			}
 			if(workList[i].dealTypCd == "EN"){
