--- a/src/main/resources/templates/thymeleaf/fo/myPage/information.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/information.html
@@ -1933,20 +1933,18 @@
       });
       
       
-      jQuery(document).ready(function() {
-    		if(sAuthSqVal == 2){
-    			document.getElementById("portfolio").style.display="";
-    		}
-    		$("#conTitle").empty();
-    		const conBtn = document.getElementById("conBtn");
-    		conBtn.remove();
-    		var conTitleHtml = "";
-    		conTitleHtml += '<h3>포트폴리오</h3>';
-    		$("#conTitle").append(conTitleHtml).trigger("create");
+$(function() {
+	if(sAuthSqVal == 2){
+		document.getElementById("portfolio").style.display="";
+	}
+	$("#conTitle").empty();
+	const conBtn = document.getElementById("conBtn");
+	conBtn.remove();
+	var conTitleHtml = "";
+	conTitleHtml += '<h3>포트폴리오</h3>';
+	$("#conTitle").append(conTitleHtml).trigger("create");
     		
-    	
-    		
-    	});
+});
     </script>
     
 	
