--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
@@ -50,7 +50,283 @@
 						
 						<div>
 							<div class="columns-wrap2" id="columns2">
+								<figure class="item">
 								
+									<!-- 하트 on하면 색상 -->
+									<div class="heart on"></div>
+									
+									<!-- active하고 hover하면 나오고 /  sale 넣고 hover하면나옵니다 / auction hover -->
+									<div class="item-div-img reg">
+										<img src="resources/img/de/be-bg1.png">
+										
+										<div class="item-ho">
+											<p>2022. 01. 01 – 2022. 01.30</p>
+											<p>응찰수 : 12</p>
+											<ul>
+												<li>03<span>day</span></li>
+												<li>03<span>hrs</span></li>
+												<li>03<span>min</span></li>
+												<li>03<span>sec</span></li>
+											</ul>
+											<h4>시작가  3,700,000 원</h4>
+										</div>
+										
+										<div class="item-ho2 sale-div">
+											<h3>판매중</h3>
+											<ul>
+												<li>03<span>day</span></li>
+												<li>03<span>hrs</span></li>
+												<li>03<span>min</span></li>
+												<li>03<span>sec</span></li>
+											</ul>
+										</div>
+										
+										<div class="item-ho2 auction-div">
+											<h3>경매중</h3>
+											<ul>
+												<li>03<span>day</span></li>
+												<li>03<span>hrs</span></li>
+												<li>03<span>min</span></li>
+												<li>03<span>sec</span></li>
+											</ul>
+										</div>
+										
+										<!-- 임시저장 -->
+										<div class="item-ho3 save-div">
+											<div class="saves">
+												<img src="resources/img/mypage/icon-7.png" />
+												<span class="saves-text">임시저장</span>
+											</div>
+										</div>	
+										
+										<!-- 등록수정버튼 -->
+										<div class="item-ho3 reg-div">
+											<div class="regs">
+												<a href="#" class="reg-a"><span>거래 등록</span></a>
+												<a href="#" class="cor-a"><span>작품 수정</span></a>
+											</div>
+										</div>
+									</div>
+									
+									<!-- 하단텍스트 -->
+									<div class="item-body">
+										<div class="uesr-s">
+											<img src="resources/img/de/ues-icon.png" />
+										</div>
+										<div class="text-s">
+											<h3>작가명 (1983년생)</h3>
+											<p class="ts-1">작품명 입니다작품명입니다작품명입니다(2021...</p>
+											<p>Oil & Canvas</p>
+											<p>72.7x90.9cm</p>
+											
+											<h4>판매가 3,700,000</h4>
+											
+											<!-- <p class="ts-2">
+												2022. 01. 01 – 2022. 01.30<br/>
+												응찰수 : 12<br/>
+												03일   07시    10분   30초 
+											</p> -->
+										</div>
+										
+										<!-- artist active넣어야지나옴 -->
+										<div class="artist active"><span>Artist</span></div>
+									</div>
+									
+								</figure>
+						
+								<figure class="item">
+									<!-- 하트 on하면 색상 -->
+									<div class="heart"></div>
+									
+									<!-- sold-1 ~ 4 넣으면 나옵니다 -->
+									<div class="item-div-img sold-2">
+										<img src="resources/img/de/be-bg2.png">
+									</div>
+									
+									<!-- 하단텍스트 -->
+									<div class="item-body">
+										<div class="uesr-s">
+											<img src="resources/img/de/ues-icon.png" />
+										</div>
+										<div class="text-s">
+											<h3>작가명 (1983년생)</h3>
+											<p class="ts-1">작품명 입니다작품명입니다작품명입니다(2021...</p>
+											<p>Oil & Canvas</p>
+											<p>72.7x90.9cm</p>
+											
+											<h4>판매가 3,700,000</h4>
+											
+										</div>
+										
+										<!-- artist -->
+										<div class="artist"><span>Artist</span></div>
+									</div>
+								</figure>
+								
+								<figure class="item">
+									<!-- 하트 on하면 색상 -->
+									<div class="heart"></div>
+									
+									<div class="item-div-img sale">
+										<img src="resources/img/de/be-bg3.png">										
+									</div>
+									
+									<!-- 하단텍스트 -->
+									<div class="item-body">
+										<div class="uesr-s">
+											<img src="resources/img/de/ues-icon.png" />
+										</div>
+										<div class="text-s">
+											<h3>작가명 (1983년생)</h3>
+											<p class="ts-1">작품명 입니다작품명입니다작품명입니다(2021...</p>
+											<p>Oil & Canvas</p>
+											<p>72.7x90.9cm</p>
+											
+											<h4>판매가 3,700,000</h4>
+										</div>
+										
+										<!-- artist -->
+										<div class="artist"><span>Artist</span></div>
+									</div>
+								</figure><figure class="item">
+								
+									<!-- 하트 on하면 색상 -->
+									<div class="heart on"></div>
+									
+									<!-- active하고 hover하면 나오고 /  sale 넣고 hover하면나옵니다 / auction hover -->
+									<div class="item-div-img reg">
+										<img src="resources/img/de/be-bg1.png">
+										
+										<div class="item-ho">
+											<p>2022. 01. 01 – 2022. 01.30</p>
+											<p>응찰수 : 12</p>
+											<ul>
+												<li>03<span>day</span></li>
+												<li>03<span>hrs</span></li>
+												<li>03<span>min</span></li>
+												<li>03<span>sec</span></li>
+											</ul>
+											<h4>시작가  3,700,000 원</h4>
+										</div>
+										
+										<div class="item-ho2 sale-div">
+											<h3>판매중</h3>
+											<ul>
+												<li>03<span>day</span></li>
+												<li>03<span>hrs</span></li>
+												<li>03<span>min</span></li>
+												<li>03<span>sec</span></li>
+											</ul>
+										</div>
+										
+										<div class="item-ho2 auction-div">
+											<h3>경매중</h3>
+											<ul>
+												<li>03<span>day</span></li>
+												<li>03<span>hrs</span></li>
+												<li>03<span>min</span></li>
+												<li>03<span>sec</span></li>
+											</ul>
+										</div>
+										
+										<!-- 임시저장 -->
+										<div class="item-ho3 save-div">
+											<div class="saves">
+												<img src="resources/img/mypage/icon-7.png" />
+												<span class="saves-text">임시저장</span>
+											</div>
+										</div>	
+										
+										<!-- 등록수정버튼 -->
+										<div class="item-ho3 reg-div">
+											<div class="regs">
+												<a href="#" class="reg-a"><span>거래 등록</span></a>
+												<a href="#" class="cor-a"><span>작품 수정</span></a>
+											</div>
+										</div>
+									</div>
+									
+									<!-- 하단텍스트 -->
+									<div class="item-body">
+										<div class="uesr-s">
+											<img src="resources/img/de/ues-icon.png" />
+										</div>
+										<div class="text-s">
+											<h3>작가명 (1983년생)</h3>
+											<p class="ts-1">작품명 입니다작품명입니다작품명입니다(2021...</p>
+											<p>Oil & Canvas</p>
+											<p>72.7x90.9cm</p>
+											
+											<h4>판매가 3,700,000</h4>
+											
+											<!-- <p class="ts-2">
+												2022. 01. 01 – 2022. 01.30<br/>
+												응찰수 : 12<br/>
+												03일   07시    10분   30초 
+											</p> -->
+										</div>
+										
+										<!-- artist active넣어야지나옴 -->
+										<div class="artist active"><span>Artist</span></div>
+									</div>
+									
+								</figure>
+						
+								<figure class="item">
+									<!-- 하트 on하면 색상 -->
+									<div class="heart"></div>
+									
+									<!-- sold-1 ~ 4 넣으면 나옵니다 -->
+									<div class="item-div-img sold-2">
+										<img src="resources/img/de/be-bg2.png">
+									</div>
+									
+									<!-- 하단텍스트 -->
+									<div class="item-body">
+										<div class="uesr-s">
+											<img src="resources/img/de/ues-icon.png" />
+										</div>
+										<div class="text-s">
+											<h3>작가명 (1983년생)</h3>
+											<p class="ts-1">작품명 입니다작품명입니다작품명입니다(2021...</p>
+											<p>Oil & Canvas</p>
+											<p>72.7x90.9cm</p>
+											
+											<h4>판매가 3,700,000</h4>
+											
+										</div>
+										
+										<!-- artist -->
+										<div class="artist"><span>Artist</span></div>
+									</div>
+								</figure>
+								
+								<figure class="item">
+									<!-- 하트 on하면 색상 -->
+									<div class="heart"></div>
+									
+									<div class="item-div-img sale">
+										<img src="resources/img/de/be-bg3.png">										
+									</div>
+									
+									<!-- 하단텍스트 -->
+									<div class="item-body">
+										<div class="uesr-s">
+											<img src="resources/img/de/ues-icon.png" />
+										</div>
+										<div class="text-s">
+											<h3>작가명 (1983년생)</h3>
+											<p class="ts-1">작품명 입니다작품명입니다작품명입니다(2021...</p>
+											<p>Oil & Canvas</p>
+											<p>72.7x90.9cm</p>
+											
+											<h4>판매가 3,700,000</h4>
+										</div>
+										
+										<!-- artist -->
+										<div class="artist"><span>Artist</span></div>
+									</div>
+								</figure>
 								<figure class="item">
 								
 									<!-- 하트 on하면 색상 -->
