SNS로그인 진행중

--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -190,7 +190,7 @@
 					</div>
 					<div class="radio-3 rad-mg">
 						<input type="checkbox" id="a1" name="cc" />
-						<label for="a1"><span></span>자동로그인</label>
+						<label for="a1"><span></span>자동로그인..</label>
 					</div>
 					<div class="bat-box3">
 						<button type="button" class="ba-btn1" onclick="login()"><span>Login</span></button>
