--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -760,8 +760,8 @@ columns figure {
 }
 
 #columns figure {
-/*     display: inline-block; */
-    margin: 5px 0px 0px 0px;
+    display: inline-block;
+    margin: 0px 0px 15px;
     position: relative;
 }
 #columns figure:hover .hd-div2{display:block;
@@ -1040,7 +1040,7 @@ transform:tarnslateY(-50%);
 
 
 .hd-div2 .hd-text {
-/*     display: table; */
+    display: table;
     position: relative;
     top: 0px;
     left: 0px;
@@ -1446,11 +1446,12 @@ columns2 figure {
     position: absolute;
     right: 10px;
     top: 10px;
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
     z-index: 1;
 }
-.heart:after{content:'';width: 35px;height: 35px;background-image: url(../img/de/har-off.png);position: absolute;right: 0;top: 0;background-repeat: no-repeat;background-position: center;}
+
+.heart:after{content:'';width: 25px;height: 25px;background-image: url(../img/de/har-off.png);position: absolute;right: 0;top: 0;background-repeat: no-repeat;background-position: center; background-size:100%;}
 .heart.on:after{background-image: url(../img/de/har-on.png);content:'';}
 
 .item-div-img{
@@ -4902,3 +4903,16 @@ position: relative;background-color: #fbfbfb;}
 .modal-secession2{max-width:480px;}
 
 
+
+/* */
+.item-div-img.active-on .item-ho{display:block;}
+.item-div-img.active-on:before{content:'';position: absolute;width: 100%;background: rgb(51 51 51 / 80%);height: 100%;left: 0;top: 0;z-index: 1;}
+.item-div-img.sale-on .sale-div{display:block;}
+.item-div-img.auction-on .auction-div{display:block;}
+
+
+
+
+.id-time{position: absolute;right: 30px;top: 50%;transform: translateY(-50%);font-size: 14px;color: #e9625c;}
+.login-body .id-box{padding: 45px;}
+.login-body .id-box .input-group input{width:255px;}
